[feat] 카테고리 테스트코드 작성